# udacity_nd013_proj3

./: .gitignore  README.md
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-ICP/: icp2-main.cpp
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-NDT/: ndt-main.cpp
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Intro-to-ICP/: icp1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-ICP-Alignment/: CMakeLists.txt  screenshot-1773924102.cam  screenshot-1773925075.cam  sm1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-Mapping/: CMakeLists.txt  make-libcarla-install.sh  map-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-Mapping/libcarla-install/include/: carla
Lesson_6_Utilizing_Scan_Matching/Exercise-Mapping/libcarla-install/include/system/: *  boost  recast  rpc
Lesson_6_Utilizing_Scan_Matching/Exercise-Mapping/libcarla-install/lib/: *.so*
Lesson_6_Utilizing_Scan_Matching/Exercise-NDT-Alignment/: CMakeLists.txt  sm2-main.cpp  sm2-main.cpp.bak
Lesson_7_Project_Scan_Matching_Localization/c3-project/: c3-main-args.cpp  c3-main-v2.cpp  c3-main.cpp
c3-project/: CMakeLists.txt  c3-main.cpp
